Correction of tiles alignment and added border to them

--- a/lihof/style.css
+++ b/lihof/style.css
@@ -3,7 +3,7 @@ Theme Name: lihof
 Theme URI: http://themes.redradar.net/adirondack/documentation/
 Author: Kelly Dwan & Mel Choyce
 Author URI: http://themes.redradar.net
-Description: Adirondack has a bright, clean layout designed to give your content the full attention it deserves. With large images and neat typography, this theme is crafted for longform writers and photographers alike.
+Description: Lihof is a child theme based on adirondack, customized for lihof.net
 Version: 0.1.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -42,6 +42,7 @@ and Blueprint http://www.blueprintcss.org/
 12.0 - Media
 	12.1 - Captions
 	12.2 - Galleries
+13.0 - lihof specific styles
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
 1.0 - Reset
@@ -2287,4 +2288,18 @@ img[class*="wp-image-"] {
 .wp-audio-shortcode,
 .wp-video {
   margin-bottom: 1.5em;
+}
+/*--------------------------------------------------------------
+13.0 - lihof specific styles
+--------------------------------------------------------------*/
+.home .entry-list {
+  margin: 0;
+}
+
+.home .entry-list-item {
+  display: block;
+}
+.post.type-post {
+  border: solid 2px #2c3642;
+  box-sizing:border-box;
 }
